output-files/stau-truth/PYpairStau2018_M-432test.txt
  File "scripts/PYtest_truth.py", line 42
    print(f"Processing file: {file_name}")
                                        ^
SyntaxError: invalid syntax
